# cargo-my-bin

./: Cargo.toml  LICENSE.md  README.md
src/: info.rs  main.rs
