[package]
name = "cargo-my-bin"
version = "0.1.0"
authors = ["Piotr Bajdek <piotr.bajdek@proton.me>"]
edition = "2021"
description = "list installed crates: a cargo subcommand to display the content of .cargo/bin/"
readme = "README.md"
repository = "https://github.com/piotrbajdek/cargo-my-bin"
license = "UPL-1.0"
keywords = ["binaries", "cargo", "crates", "packages", "rust"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
dirs = "4.0"

[profile.release]
codegen-units = 1
strip = true
